# amorphous

./: .gitignore  .travis.yml  README.md  build.sh
3DMath/HelixPolygonModelTest/: HelixPolygonModelTest.cpp  HelixPolygonModelTest.vcxproj  HelixPolygonModelTest.vcxproj.filters
3DMath/PerlinNoiseTest/: PerlinNoiseTest.cpp  PerlinNoiseTest.sln
3DMath/PrimitivePolygonModelMakerTest/: PrimitivePolygonModelMakerTest.cpp  PrimitivePolygonModelMakerTest.filters  PrimitivePolygonModelMakerTest.vcxproj  PrimitivePolygonModelMakerTest.vcxproj.filters
3DMath/TCBSplineTest/: TCBSplineTest.cpp  TCBSplineTest.sln  TCBSplineTest.vcxproj  TCBSplineTest.vcxproj.filters
AutoResourceArchiver/src/: AutoResourceArchiverMain.cpp
AutoResourceArchiver/vsp/: AutoResourceArchiver.sln  AutoResourceArchiver.vcproj
BSPStageBase_VC7/: BSPStageBase_VC7.sln  BSPStageBase_VC7.vcproj
BVHViewer/src/: BVHViewer.cpp  BVHViewer.hpp
BVHViewer/vsp/: BVHViewer.vcproj
BasicFramework/: BasicFramework.sln  BasicFramework.vcproj
BasicFramework_VC8/: BasicFramework.vcproj  UpgradeLog.XML
BasicFramework_VC9E/: BasicFramework_VC9E.sln  BasicFramework_VC9E.vcproj
BumpmapTextureMaker/src/: BumpmapTextureMaker2_LWO2.cpp  BumpmapTextureMaker2_LWO2.h  BumpmapTextureMaker2_Main.cpp
BumpmapTextureMaker/vsp/: BumpmapTextureMaker2.sln  BumpmapTextureMaker2.vcproj
CartridgeMaker/src/: CartridgeMaker_Main.cpp
EmbeddedImageSourceGenerator/: EmbeddedImageSourceGenerator.cpp
FlightGame/src/: DefaultKeyBindFG.cpp  DefaultKeyBindFG.h  EntityGroups.h  FlightGame.h  FlightGameGlobalParams.cpp  FlightGameGlobalParams.h
GameStageFramework/: GameStageFramework.sln  GameStageFramework.vcproj
GameStageFramework_VC8/: GameStageFramework_VC8.sln  GameStageFramework_VC8.vcproj
GraphicsDemos/src/: 2DPrimitivesTest.cpp  2DPrimitivesTest.hpp  AsyncLoadingTest.cpp  AsyncLoadingTest.hpp  BrickWallTextureGeneratorTest.cpp  BrickWallTextureGeneratorTest.hpp  CubeMapTest.hpp  CustomMeshTest.cpp  CustomMeshTest.hpp  EnvMapTest.cpp  EnvMapTest.hpp  GLSLTest.cpp  GLSLTest.hpp  GenericShaderTest.cpp  GenericShaderTest.hpp  GraphicsDemos.cpp  GraphicsElementEffectTest.cpp  GraphicsElementEffectTest.hpp  GraphicsElementsTest.cpp  GraphicsElementsTest.hpp  HLSLEffectTest.cpp  HLSLEffectTest.hpp  LensFlareTest.cpp  LensFlareTest.hpp  LightingTest.cpp  LightingTest.hpp  MeshSplitterTest.cpp  MeshSplitterTest.hpp  MultibyteFontTest.cpp  MultibyteFontTest.hpp  OBBTreeTest.cpp  OBBTreeTest.hpp  PerlinNoiseTextureGeneratorTest.cpp  PerlinNoiseTextureGeneratorTest.hpp  PlanarReflectionTest.cpp  PlanarReflectionTest.hpp  PostProcessEffectTest.cpp  PostProcessEffectTest.hpp  PrimitiveRendererTest.cpp  PrimitiveRendererTest.hpp  (+14 more)
LWSJointLimitEditor/src/: LWSJointLimitEditor.cpp  LWSJointLimitEditorMain.cpp
LWSJointLimitEditor/vsp/: LWSJointLimitEditor.sln  LWSJointLimitEditor.vcproj
LWSMotionCompiler/app/: params.txt
LWSMotionCompiler/src/: LWSMotionCompiler.cpp  LWSMotionCompiler.hpp  LWSMotionCompilerMain.cpp
LWSMotionCompiler/vsp/: LWSMotionCompiler.sln  LWSMotionCompiler.vcproj
MaterialFileCompiler/: MaterialCompiler_Main.cpp  MaterialFileCompiler.cpp  MaterialFileCompiler.dsp  MaterialFileCompiler.dsw  MaterialFileCompiler.h  MaterialFileCompiler.plg
MeshModelCompiler/src/: MeshModelCompiler_Main.cpp
MeshModelCompiler/vsp/: MeshModelCompiler.sln  MeshModelCompiler.vcproj
MeshViewer/src/: MeshViewer.cpp  MeshViewer.hpp
MeshViewer/vsp/: MeshViewer.sln  MeshViewer.vcproj
MotionEditor/src/: MotionEditorApp.cpp  MotionEditorApp.hpp  MotionEditor_Main.cpp  MotionPrimitiveViewer.cpp  MotionPrimitiveViewer.h
MotionEditor/vsp/: MotionEditor.sln  MotionEditor.vcproj
StaticGeometryCompiler/app/: default_input.txt  default_skybox.lwo  default_skybox.msh
StaticGeometryCompiler/src/: MeshOperations.cpp  MeshOperations.hpp  StaticGeometryCompiler.cpp  StaticGeometryCompiler.h  StaticGeometryCompilerAppBase.cpp  StaticGeometryCompilerFG.cpp  StaticGeometryCompilerFG.h  StaticGeometryCompiler_Console.cpp  StaticGeometryCompiler_Main.cpp  StaticGeometryCompiler_Win32Main.cpp  StaticGeometryDesc.cpp  StaticGeometryDesc.h  StaticGeometryDesc.hpp
Support/BitmapImageTest/: BitmapImageTest.cpp  BitmapImageTest.sln  BitmapImageTest.vcproj  BitmapImageTest.vcxproj  BitmapImageTest.vcxproj.filters
Support/FreeTypeTest/: FreeTypeTest.cpp  FreeTypeTest.sln  FreeTypeTest.vcproj  FreeTypeTest.vcxproj  FreeTypeTest.vcxproj.filters
Support/TextFileScannerTest/: TextFileScannerTest.cpp  TextFileScannerTest.sln  TextFileScannerTest.vcproj  TextFileScannerTest.vcxproj  TextFileScannerTest.vcxproj.filters  compile.sh
Support/clipboard_utils_test/: clipboard_utils_test.cpp  clipboard_utils_test.sln  clipboard_utils_test.vcxproj
Support/fixed_string_test/: Makefile  compile.sh  fixed_string_test.cpp  fixed_string_test.sln  fixed_string_test.vcproj  fixed_string_test.vcxproj  fixed_string_test.vcxproj.filters
Support/msvc/: SupportDemos.vcxproj  SupportDemos.vcxproj.filters
Support/src/: BitmapImageTest.cpp  FreeTypeTest.cpp  SupportDemos.cpp  clipboard_utils_test.cpp  fixed_string_test.cpp
_Common/: GraphicsTestBase.cpp  GraphicsTestBase.hpp  KeyState.hpp  KeyState_Win32.hpp  TestMain_Win32.cpp
amorphous/: 3DMath.hpp  Platform.hpp  Platform_Win32.hpp  Task.hpp  fwd.hpp
amorphous/3DMath/: 3DGameMath.hpp  3DStructs.hpp  AABB3.hpp  AABTree.hpp  BSPTreeForBox.hpp  BSPTreeForTriangleMesh.cpp  ConvexPolygon.cpp  ConvexPolygonUtilities.hpp  GridPolygonModelMaker.hpp  HelixPolygonModelMaker.cpp  HelixPolygonModelMaker.hpp  IndexedTriangle.hpp  Matrix22.hpp  Matrix22.inl  Matrix34.hpp  Matrix44.inl  OBB3.hpp  OBBTree.cpp  Perlin.hpp  Plane.hpp  PolygonModelUtilities.hpp  Quaternion.inl  (+5 more)
framework/cmake/: CMakeLists.txt  build.sh
gds/: 3DMath.h  3DMath.hpp  GameInput.h  GameInput.hpp  Graphics.hpp  Input.hpp  LightWave.h  LightWave.hpp  MotionSynthesis.h  MotionSynthesis.hpp  Physics.hpp  Platform_Win32.hpp  Script.h  Script.hpp  Stage.h  Stage.hpp  Support.h  Support.hpp  Task.h  Task.hpp  UI.h  UI.hpp  XML.hpp  base.h  base.hpp
(+4941 files in other folders)
