cmake_minimum_required(VERSION 3.5)
project(Amorphous)

include_directories("$ENV{INCLUDE}")

# Enable C++14
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include_directories(../)
add_library(amorphous-core STATIC
../amorphous/3DMath/AABB3.cpp
../amorphous/3DMath/AABTree.cpp
../amorphous/3DMath/BSPTreeForBox.cpp
../amorphous/3DMath/BSPTreeForTriangleMesh.cpp
../amorphous/3DMath/ConvexPolygon.cpp
../amorphous/3DMath/OBBTree.cpp
../amorphous/3DMath/Perlin.cpp
#../amorphous/3DMath/PolygonMesh.cpp
../amorphous/3DMath/PrimitivePolygonModelMaker.cpp
../amorphous/Support/BitmapImage_stb.cpp
../amorphous/Support/Profile.cpp
../amorphous/Graphics/Camera.cpp
../amorphous/Graphics/CubeMapManager.cpp
../amorphous/Graphics/CubeTextureRenderTarget.cpp
../amorphous/Graphics/DoubleConeScrollEffect.cpp
../amorphous/Graphics/GraphicsComponentCollector.cpp
../amorphous/Graphics/GraphicsDevice.cpp
../amorphous/Graphics/GraphicsEffectManager.cpp
../amorphous/Graphics/GraphicsElementManager.cpp
../amorphous/Graphics/GraphicsElements.cpp
../amorphous/Graphics/GraphicsResourceCacheManager.cpp
../amorphous/Graphics/GraphicsResourceDescs.cpp
../amorphous/Graphics/GraphicsResourceEntries.cpp
../amorphous/Graphics/GraphicsResourceHandle.cpp
../amorphous/Graphics/GraphicsResourceLoaders.cpp
../amorphous/Graphics/GraphicsResourceManager.cpp
../amorphous/Graphics/GraphicsResources.cpp
../amorphous/Graphics/IndexedPolygon.cpp
../amorphous/Graphics/LensFlare.cpp
../amorphous/Graphics/MeshContainerRenderMethod.cpp
../amorphous/Graphics/MeshObjectContainer.cpp
../amorphous/Graphics/MeshObjectHandle.cpp
../amorphous/Graphics/OnScreenDebugInfoRenderer.cpp
../amorphous/Graphics/PostProcessEffect.cpp
../amorphous/Graphics/PostProcessEffectFilter.cpp
../amorphous/Graphics/PostProcessEffectManager.cpp
../amorphous/Graphics/PrimitiveShapeRenderer.cpp
../amorphous/Graphics/PseudoNoiseEffect.cpp
../amorphous/Graphics/RectTree.cpp
../amorphous/Graphics/RectTriListIndex.cpp
../amorphous/Graphics/ResourceLoadingStateHolder.cpp
../amorphous/Graphics/ShaderHandle.cpp
../amorphous/Graphics/ShadowMapManager.cpp
../amorphous/Graphics/ShadowMaps.cpp
../amorphous/Graphics/ShapeDetector.cpp
../amorphous/Graphics/ShapesExtractor.cpp
../amorphous/Graphics/SimpleMotionBlur.cpp
../amorphous/Graphics/SkyboxMisc.cpp
../amorphous/Graphics/TextureHandle.cpp
../amorphous/Graphics/TextureRenderTarget.cpp
../amorphous/Graphics/2DPrimitive/2DPrimitive.cpp
../amorphous/Graphics/2DPrimitive/2DRect.cpp
../amorphous/Graphics/2DPrimitive/2DFrameRect.cpp
../amorphous/Graphics/2DPrimitive/2DRoundRect.cpp
../amorphous/Graphics/2DPrimitive/2DPolygon.cpp
../amorphous/Graphics/2DPrimitive/2DTriangle.cpp
../amorphous/Graphics/2DPrimitive/2DRectSet.cpp
../amorphous/Graphics/2DPrimitive/2DPrimitiveRenderer.cpp
../amorphous/Graphics/Mesh/BasicMesh.cpp
../amorphous/Graphics/Mesh/CustomMesh.cpp
../amorphous/Graphics/Mesh/ProgressiveMesh.cpp
../amorphous/Graphics/Mesh/SkeletalMesh.cpp
../amorphous/Graphics/Mesh/MeshFactory.cpp
../amorphous/Graphics/Mesh/CustomMeshRenderer.cpp
../amorphous/Graphics/Mesh/MeshInfoRenderer.cpp
../amorphous/Graphics/Mesh/RectSetMesh.cpp
../amorphous/Graphics/Mesh/ConvexMeshSplitter.cpp
../amorphous/Graphics/MeshGenerators/MeshGenerators.cpp
../amorphous/Graphics/MeshModel/3DMeshModelArchive.cpp
../amorphous/Graphics/MeshModel/3DMeshModelBuilder.cpp
../amorphous/Graphics/MeshModel/General3DMeshFunctions.cpp
../amorphous/Graphics/MeshModel/MeshArchiveToGeneral3DMeshConverer.cpp
../amorphous/Graphics/MeshModel/MeshBone.cpp
../amorphous/Graphics/MeshModel/PrimitiveShapeMeshes.cpp
../amorphous/Graphics/Shader/ShaderManager.cpp
../amorphous/Graphics/Shader/ShaderLightManager.cpp
../amorphous/Graphics/Shader/ShaderManagerHub.cpp
../amorphous/Graphics/TextureGenerators/ParticleTextureGenerator.cpp
../amorphous/Graphics/TextureGenerators/PerlinNoiseTextureGenerator.cpp
../amorphous/Graphics/TextureGenerators/NoiseTextureGenerators.cpp
../amorphous/Graphics/TextureGenerators/TextureFilter.cpp
../amorphous/Graphics/TextureGenerators/TextureGeneratorFactory.cpp
../amorphous/Graphics/OpenGL/GLGraphicsDevice.cpp
../amorphous/Graphics/OpenGL/GLGraphicsResources.cpp
../amorphous/Graphics/OpenGL/GLInitialization.cpp
../amorphous/Graphics/OpenGL/GLTextureRenderTarget.cpp
../amorphous/Graphics/OpenGL/GLCubeTextureRenderTarget.cpp
../amorphous/Graphics/OpenGL/GLTextureUtilities.cpp
../amorphous/Graphics/OpenGL/2DPrimitive/2DPrimitiveRenderer_GL.cpp
../amorphous/Graphics/OpenGL/Mesh/GLBasicMeshImpl.cpp
../amorphous/Graphics/OpenGL/Mesh/GLProgressiveMeshImpl.cpp
../amorphous/Graphics/OpenGL/Mesh/GLSkeletalMeshImpl.cpp
../amorphous/Graphics/OpenGL/Mesh/GLCustomMeshRenderer.cpp
../amorphous/Graphics/OpenGL/Shader/GLShader.cpp
../amorphous/Graphics/OpenGL/Shader/GLSLShaderLightManager.cpp
../amorphous/Graphics/OpenGL/Shader/Embedded/EmbeddedGenericGLSLShader.cpp
../amorphous/Graphics/OpenGL/Shader/Embedded/EmbeddedPostProcessEffectGLSLShader.cpp
../amorphous/Graphics/OpenGL/Shader/Embedded/GLEmbeddedMiscGLSLShader.cpp
#../amorphous/Graphics/OpenGL/.cpp
#../amorphous/Graphics/OpenGL/.cpp
#../amorphous/Graphics/.cpp
#../amorphous/Graphics/.cpp
)

